working on the slides checking functionality, need to update the check with the new contrasts

--- a/preprocess/prepro_slides.ipynb
+++ b/preprocess/prepro_slides.ipynb
@@ -19,12 +19,12 @@
     }
    },
    "source": [
-    "## first thing we will always do is load our modules"
+    "## First thing we will always do is load our modules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -36,7 +36,9 @@
     "import glob\n",
     "import os\n",
     "import pdb\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import argparse\n",
+    "import datetime"
    ]
   },
   {
@@ -209,6 +211,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -242,6 +245,7 @@
    },
    "source": [
     "## Normally at the command line we would run something like this:\n",
+    "\n",
     "```\n",
     "bet input output [options]\n",
     "```"
@@ -269,6 +273,29 @@
     "```\n",
     "os.system(bet input output -F)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#try running this \n",
+    "\n",
+    "print(os.system('echo $FSLDIR'))\n",
+    "\n",
+    "\n",
+    "#now look at the terminal you launched your jupyter notebook from\n"
    ]
   },
   {
@@ -315,19 +342,21 @@
     }
    },
    "source": [
-    "## Our subject numbers and nifti files use a predictable pattern, so we can use the glob module to find everything with a similar pattern. Here we are going to use a wildcard character (*) to represent the portions of the subject number that differ."
+    "## Our subject numbers and nifti files use a predictable pattern! \n",
+    "## We can use the glob module to find everything with a similar pattern. \n",
+    "## Here we are going to use a wildcard character (*) to represent the portions of the subject number that differ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_bra.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_bra_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mask.nii.gz']\n"
+      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mcf.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-rest_bold.nii.gz']\n"
      ]
     }
    ],
@@ -350,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "152"
+       "149"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_bra.nii.gz'"
+       "'/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,12 +425,12 @@
     }
    },
    "source": [
-    "## we can also take any element from the list and make it a string. By making a string we can grab IDs or other parts of interest"
+    "## We can also take any element from the list and make it a string. By making a string we can grab IDs or other parts of interest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -412,8 +441,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is /Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_bra.nii.gz\n",
-      "['', 'Users', 'gracer', 'Desktop', 'data', 'sub-10159', 'func', 'sub-10159_task-bart_bold_bra.nii.gz']\n",
+      "this is /Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz\n",
+      "['', 'Users', 'gracer', 'Desktop', 'data', 'sub-10159', 'func', 'sub-10159_task-bart_bold_brain.nii.gz']\n",
       "sub-10159\n"
      ]
     }
@@ -436,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sub-10159_task-bart_bold_bra\n"
+      "sub-10159_task-bart_bold_brain\n"
      ]
     }
    ],
@@ -484,14 +513,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sub-10159_task-bart_bold_bra_brain\n"
+      "sub-10159_task-bart_bold_brain_brain\n"
      ]
     }
    ],
@@ -513,15 +542,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-21-c263dd53731b>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-17-c263dd53731b>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -580,19 +613,46 @@
     }
    },
    "source": [
-    "## Now we have the ability to run bet through python on one subject.... but what about all the other scans.... ? GLOB!"
+    "## Now we have the ability to run bet through python on one subject.... but what about all the other scans.... ? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![](https://i.imgur.com/itVtNcK.gif)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "hideOutput": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4e60444a7e4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m '''\n\u001b[1;32m      4\u001b[0m \u001b[0mthis\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlittle\u001b[0m \u001b[0mlong\u001b[0m \u001b[0mto\u001b[0m \u001b[0mtype\u001b[0m \u001b[0meach\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mit\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mreally\u001b[0m \u001b[0measy\u001b[0m \u001b[0mto\u001b[0m \u001b[0mmess\u001b[0m \u001b[0mup\u001b[0m \u001b[0mthe\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mformating\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'glob' is not defined"
+     ]
+    }
+   ],
    "source": [
     "input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
-    "#this is a little long to type each time, and it is really easy to mess up the / formating "
+    "\n",
+    "'''\n",
+    "this is a little long to type each time, \n",
+    "and it is really easy to mess up the / formating \n",
+    "'''"
    ]
   },
   {
@@ -732,6 +792,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -756,15 +817,198 @@
     "5. Loop through our list of subjects (from glob)\n",
     "6. Use string comprehension to format file names\n",
     "7. Use if/else loops to check for existing data\n",
+    "\n",
+    "\n",
     "### Try writing a function to skull strip a T1w scan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
+   "outputs": [],
+   "source": [
+    "def prepro(basedir, args, arglist, DATA):\n",
+    "#bet\n",
+    "    if args.STRIP==True:\n",
+    "        for sub in DATA:\n",
+    "            for nifti in glob.glob(os.path.join(sub,'func','sub-*_task-%s_bold.nii.gz')%(arglist['TASK'])):\n",
+    "                input=item\n",
+    "                output_path=item.strip('.nii.gz')\n",
+    "                output=output_path+'_brain.nii.gz'\n",
+    "                print(output)\n",
+    "            \n",
+    "                if os.path.exists(output):\n",
+    "                    print(output_path+' is already stripped')\n",
+    "                else:\n",
+    "                    os.system(\"/usr/local/fsl/bin/bet %s %s -F\"%(input, output))\n",
+    "#bet rage\n",
+    "    if args.RAGE==True:\n",
+    "        print(\"starting bet rage\")\n",
+    "        for sub in DATA:\n",
+    "            for input in glob.glob(os.path.join(sub,'anat','*T1w.nii.gz')):\n",
+    "                output=input.strip('.nii.gz')\n",
+    "                print(output)\n",
+    "                if os.path.exists(output+'_brain.nii.gz'):\n",
+    "                    print(output+' exists, skipping')\n",
+    "                else:\n",
+    "                    BET_OUTPUT=output+'_defaced'\n",
+    "                    x=(\"/usr/local/fsl/bin/bet %s %s -R\"%(input, BET_OUTPUT))\n",
+    "                    print(x)\n",
+    "                    os.system(x)\n",
+    "   \n",
+    "def main(DATA):\n",
+    "    basedir='/Users/gracer/Desktop/data'\n",
+    "    parser=argparse.ArgumentParser(description='preprocessing')\n",
+    "    parser.add_argument('-task',dest='TASK',\n",
+    "                        default=False, help='which task are we running on?')\n",
+    "    parser.add_argument('-bet',dest='STRIP',action='store_true',\n",
+    "                        default=False, help='bet via fsl using defaults for functional images')\n",
+    "    parser.add_argument('-betrage',dest='RAGE',action='store_true',\n",
+    "                        default=False, help='bet via fsl using robust estimation for anatomical images')\n",
+    "    args = parser.parse_args()\n",
+    "    arglist={}\n",
+    "    for a in args._get_kwargs():\n",
+    "        arglist[a[0]]=a[1]\n",
+    "    print(arglist)\n",
+    "    prepro(basedir, args, arglist, DATA)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Whoa what is all this extra stuff??? \n",
+    "Let's take a look at all the new functionality that is possible "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "## argparse\n",
+    "This will allow us to give user defined arguments\n",
+    "### Why would I make my life more complicated?\n",
+    "\n",
+    "- This is a good option for if you have multiple people working on preprocessing \n",
+    "\n",
+    "\n",
+    "- You want to make one giant preprocessing script and have control over which commands are run  \n",
+    "   \n",
+    "   Instead of a bunch of smaller functions that infividually have to be called "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def main(DATA):\n",
+    "    basedir='/Users/gracer/Desktop/data'\n",
+    "    parser=argparse.ArgumentParser(description='preprocessing')\n",
+    "    parser.add_argument('-task',dest='TASK',\n",
+    "                        default=False, help='which task are we running on?')\n",
+    "    parser.add_argument('-bet',dest='STRIP',action='store_true',\n",
+    "                        default=False, help='bet via fsl using defaults for functional images')\n",
+    "    parser.add_argument('-betrage',dest='RAGE',action='store_true',\n",
+    "                        default=False, help='bet via fsl using robust estimation for anatomical images')\n",
+    "    args = parser.parse_args()\n",
+    "    arglist={}\n",
+    "    for a in args._get_kwargs():\n",
+    "        arglist[a[0]]=a[1]\n",
+    "    print(arglist)\n",
+    "    prepro(basedir, args, arglist, DATA)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "* Define the parser, and give it a nice description \n",
+    "\n",
+    "```\n",
+    "parser=argparse.ArgumentParser(description='preprocessing')\n",
+    "\n",
+    "```\n",
+    "\n",
+    "* Start thinking about arguments, these should be things that either trigger functionality or are global variables\n",
+    "\n",
+    "```\n",
+    "parser.add_argument('-task',dest='TASK',\n",
+    "                        default=False, help='which task are we running on?')\n",
+    "parser.add_argument('-betrage',dest='RAGE',action='store_true',\n",
+    "                        default=False, help='bet via fsl using robust estimation for anatomical images')\n",
+    "\n",
+    "```\n",
+    "1. The first part is the flag, it will be entered with our script at the commandline\n",
+    "2. Next is the destination, that is what the argparser is saving our input as\n",
+    "3. We set the default to false, meaning you have to enter something for it to be true\n",
+    "4. It is always nice to have a help especially if you are sharing your code!\n",
+    "5. Action will store your variable, this is nice for instances where the presences of the flag indicates true\n",
+    "\n",
+    "\n",
+    "* Put all our arguments in an variable called args\n",
+    "\n",
+    "```\n",
+    "args = parser.parse_args()\n",
+    "```\n",
+    "\n",
+    "* We could keep our arguments here and call them like this:\n",
+    "\n",
+    "```\n",
+    "args.RAGE==True\n",
+    "```\n",
+    "\n",
+    "* Personally I like putting them in a dictionary!\n",
+    "\n",
+    "```\n",
+    "arglist={}\n",
+    "    for a in args._get_kwargs():\n",
+    "        arglist[a[0]]=a[1]\n",
+    "```\n",
+    "\n",
+    "* Then you can call them in a dictionary form like this:\n",
+    "\n",
+    "```\n",
+    "for nifti in glob.glob(os.path.join(sub,'func','sub-*_task-%s_bold.nii.gz')%(arglist['TASK'])):\n",
+    "```\n",
+    "\n",
+    "* The key is 'TASK' and python will understand that to be what ever you entered into your argument list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
