--- a/preprocess/prepro_slides.ipynb
+++ b/preprocess/prepro_slides.ipynb
@@ -999,11 +999,403 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## What about motion correction and motion QA???"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "def prepro(basedir, args, arglist, outhtml, out_bad_bold_list,DATA):\n",
+    "#def better(args,arglist,basedir):\n",
+    "    #bet\n",
+    "    if args.STRIP==True:\n",
+    "        print(\"starting bet\")\n",
+    "\n",
+    "        for sub in DATA:\n",
+    "            for nifti in glob.glob(os.path.join(sub,'func','sub-*_task-%s_bold.nii.gz')%(arglist['TASK'])):\n",
+    "                input=nifti\n",
+    "                output=nifti.strip('.nii.gz')\n",
+    "                if os.path.exists(output+'_brain.nii.gz'):\n",
+    "                    print(output+' exists, skipping')\n",
+    "                else:\n",
+    "                    BET_OUTPUT=output+'_brain'\n",
+    "                    x=(\"/usr/local/fsl/bin/bet %s %s -F\"%(input, BET_OUTPUT))\n",
+    "                    os.system(x)\n",
+    "                    \n",
+    "\n",
+    "#bet rage\n",
+    "    if args.RAGE==True:\n",
+    "        print(\"starting bet rage\")\n",
+    "        for sub in DATA:\n",
+    "            for input in glob.glob(os.path.join(sub,'anat','*T1w.nii.gz')):\n",
+    "                output=input.strip('.nii.gz')\n",
+    "                print(output)\n",
+    "                if os.path.exists(output+'_brain.nii.gz'):\n",
+    "                    print(output+' exists, skipping')\n",
+    "                else:\n",
+    "                    BET_OUTPUT=output+'_defaced'\n",
+    "                    x=(\"/usr/local/fsl/bin/bet %s %s -R\"%(input, BET_OUTPUT))\n",
+    "                    print(x)\n",
+    "                    os.system(x)\n",
+    "                    \n",
+    "\n",
+    "       \n",
+    "#motion correction\n",
+    "    if args.MOCO==False:\n",
+    "        print(\"No motion correction performed\")\n",
+    "    else:\n",
+    "        print(\"starting motion correction\")\n",
+    "        for sub in DATA:\n",
+    "            for dir in glob.glob(os.path.join(sub,'func')):\n",
+    "                if not os.path.exists(os.path.join(basedir,dir,'motion_assessment')):\n",
+    "                    os.makedirs(os.path.join(basedir,dir,'motion_assessment'))\n",
+    "                os.chdir(os.path.join(basedir, dir))\n",
+    "                for input in glob.glob('*brain.nii.gz'):\n",
+    "                    output=input.split('.')[0]\n",
+    "                    print(output)\n",
+    "                    if output.endswith('mcf'):\n",
+    "                        print(output+' exists, skipping')\n",
+    "                    else:\n",
+    "                        os.system(\"mcflirt -in %s -plots\"%(output))\n",
+    "                        os.system(\"fsl_motion_outliers -i %s -o motion_assessment/%s_confound.txt --fd --thresh=%s -p motion_assessment/fd_plot -v > motion_assessment/%s_outlier_output.txt\"%(output,output,arglist['MOCO'],output))\n",
+    "                        os.system(\"cat motion_assessment/%s_outlier_output.txt >> %s\"%(output,outhtml))\n",
+    "                        plotz=os.path.join(basedir,dir,'motion_assessment','fd_plot.png')\n",
+    "                        os.system(\"echo '<p>=============<p>FD plot %s <br><IMG BORDER=0 SRC=%s WIDTH=%s></BODY></HTML>' >> %s\"%(output,plotz,'100%', outhtml))\n",
+    "                    \n",
+    "                        if os.path.isfile(\"motion_assessment/%s_confound.txt\"%(output))==False:\n",
+    "                            os.system(\"touch motion_assessment/%s_confound.txt\"%(output))\n",
+    "                        \n",
+    "                        check = subprocess.check_output(\"grep -o 1 motion_assessment/%s_confound.txt | wc -l\"%(output), shell=True)\n",
+    "                        num_scrub = [int(s) for s in check.split() if s.isdigit()]\n",
+    "                        \n",
+    "                        if num_scrub[0]>45:\n",
+    "                            with open(out_bad_bold_list, \"a\") as myfile:\n",
+    "                                myfile.write(\"%s\\n\"%(output))\n",
+    "                            myfile.close()\n",
+    "                            \n",
+    "                        if os.path.exists(\"%s_mcf.par\"%(output)):\n",
+    "                            if os.path.exists(os.path.join(basedir,dir,'motion_assessment',\"%s_mcf.par\"%(output))):\n",
+    "                                    os.remove(os.path.join(basedir,dir,'motion_assessment',\"%s_mcf.par\"%(output)))\n",
+    "\n",
+    "                        shutil.move(\"%s_mcf.par\"%(output),os.path.join(basedir,dir,'motion_assessment'))\n",
+    "                        rawfile = open(os.path.join(os.path.join(basedir,dir,'motion_assessment','%s_mcf.par'%(output))), 'r')\n",
+    "                        table = [line.rstrip().split() for line in rawfile.readlines()]\n",
+    "                        for i in range(6):\n",
+    "                            newtable = ([[line[i]] for line in table])\n",
+    "                            f=open(os.path.join(basedir,dir,'motion_assessment','%s_motcor%i.txt'%(output,i)),'w')\n",
+    "                            for item in newtable:\n",
+    "                                neat=item[0]\n",
+    "                                f.write(str(neat)+'\\n')\n",
+    "                            f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def main(DATA):\n",
+    "    basedir='/Users/gracer/Desktop/data'\n",
+    "    writedir='/Users/gracer/Desktop/data'\n",
+    "    \n",
+    "    datestamp=datetime.datetime.now().strftime(\"%Y-%m-%d-%H_%M_%S\")\n",
+    "    outhtml = os.path.join(writedir,'bold_motion_QA_%s.html'%(datestamp))\n",
+    "    out_bad_bold_list = os.path.join(writedir,'lose_gt_45_vol_scrub_%s.txt'%(datestamp))\n",
+    "\n",
+    "    parser=argparse.ArgumentParser(description='preprocessing')\n",
+    "    parser.add_argument('-task',dest='TASK',\n",
+    "                        default=False, help='which task are we running on?')\n",
+    "    parser.add_argument('-bet',dest='STRIP',action='store_true',\n",
+    "                        default=False, help='bet via fsl using defaults for functional images')\n",
+    "    parser.add_argument('-betrage',dest='RAGE',action='store_true',\n",
+    "                        default=False, help='bet via fsl using robust estimation for anatomical images')\n",
+    "    parser.add_argument('-moco',dest='MOCO',\n",
+    "                        default=False, help='this is using fsl_motion_outliers to preform motion correction and generate a confounds.txt as well as DVARS')\n",
+    "    args = parser.parse_args()\n",
+    "    arglist={}\n",
+    "    for a in args._get_kwargs():\n",
+    "        arglist[a[0]]=a[1]\n",
+    "    print(arglist)\n",
+    "    prepro(basedir, args, arglist, outhtml, out_bad_bold_list,DATA)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Yikes! This looks like a ton of new information! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## We actually are only adding a couple new elements\n",
+    "### We are going to: \n",
+    "1. Make a directory (folder)\n",
+    "2. Save text output to a useful location\n",
+    "3. Save our output plots to a single html\n",
+    "4. Check our text output files for subjects for excessive motion\n",
+    "5. Create our motion regressors\n",
+    "6. Move everything into our directory we made (#1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 1. Make a directory (folder)\n",
+    "```\n",
+    "            for dir in glob.glob(os.path.join(sub,'func')):\n",
+    "                if not os.path.exists(os.path.join(basedir,dir,'motion_assessment')):\n",
+    "                    os.makedirs(os.path.join(basedir,dir,'motion_assessment'))\n",
+    "                os.chdir(os.path.join(basedir, dir))\n",
+    "```\n",
+    "Again we are using glob to get all our subjects.\n",
+    "Next we are checking that a path exists (and therefore our directory) with the command\n",
+    "```\n",
+    "os.path.exists()\n",
+    "```\n",
+    "If it doesn't exist that means we need to make it.\n",
+    "There are a lot of ways to make directories, but I like:\n",
+    "```\n",
+    "os.makedirs()\n",
+    "```\n",
+    "Finally, we are going to change directory into the subject we are on using:\n",
+    "```\n",
+    "os.chdir(os.path.join(basedir, dir))\n",
+    "```\n",
+    "#### Notice the indentation of the code above. The last line is not in the if statement loop.\n",
+    "##### This is important because we want to change directory regardless whether the if statement is true or not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### This should look familiar\n",
+    "```\n",
+    "                for input in glob.glob('*brain.nii.gz'):\n",
+    "                    output=input.split('.')[0]\n",
+    "                    print(output)\n",
+    "                    if output.endswith('mcf'):\n",
+    "                        print(output+' exists, skipping')\n",
+    "                    else:\n",
+    "                        os.system(\"mcflirt -in %s -plots\"%(output))\n",
+    "                        os.system(\"fsl_motion_outliers -i %s -o motion_assessment/%s_confound.txt --fd --thresh=%s -p motion_assessment/fd_plot -v > motion_assessment/%s_outlier_output.txt\"%(output,output,arglist['MOCO'],output))\n",
+    "```\n",
+    "* Here we are getting all the files we previously skull stripped and using our familiar friend... \n",
+    "* os.system() to run a linux command! This time mcflirt and fsl_motion_outliers\n",
+    "* We have included a if/else statement to check if we have already done this (why waste our own time?)\n",
+    "* We also are piping the output of the fsl_motion_outliers command to a text file "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 2. Save text output to a useful location\n",
+    "os.system(\"cat motion_assessment/%s_outlier_output.txt >> %s\"%(output,outhtml))\n",
+    "* This is very similar to above, again we are using os.system to execute a linux redirect\n",
+    "* This time we are redirecting the text from the output file we made to a html \n",
+    "* Why put this all in an html?\n",
+    "   * html is useful for sharing the output\n",
+    "   * We could embed it into a fancy shmancy jupyter notebook\n",
+    "   * We could make a pdf and send it to our PI\n",
+    "   * We could print it and wall paper our walls with QA reports!\n",
+    "#### Concept check: where is the variable outhtml defined? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 3. Save our output plots to a single html\n",
+    "```\n",
+    "plotz=os.path.join(basedir,dir,'motion_assessment','fd_plot.png')\n",
+    "os.system(\"echo '<p>=============<p>FD plot %s <br><IMG BORDER=0 SRC=%s WIDTH=%s></BODY></HTML>' >> %s\"%(output,plotz,'100%', outhtml))\n",
+    "```\n",
+    "Here we are doing two things\n",
+    "1. We are creating a variable called plotz, which is the path to our fd_plot.png\n",
+    "2. We are formatting and entering the fd_plot.png into our html using os.system and linux commands to make sure it looks correct in the html \n",
+    "\n",
+    "#### Concept check: Think about the structure of the loop we are building, what is directly above the plot in our html?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 4. Check our text output files for subjects for excessive motion\n",
+    "```\n",
+    "if os.path.isfile(\"motion_assessment/%s_confound.txt\"%(output))==False:\n",
+    "                            os.system(\"touch motion_assessment/%s_confound.txt\"%(output))\n",
+    "                        \n",
+    "                        check = subprocess.check_output(\"grep -o 1 motion_assessment/%s_confound.txt | wc -l\"%(output), shell=True)\n",
+    "                        num_scrub = [int(s) for s in check.split() if s.isdigit()]\n",
+    "                        \n",
+    "                        if num_scrub[0]>45:\n",
+    "                            with open(out_bad_bold_list, \"a\") as myfile:\n",
+    "                                myfile.write(\"%s\\n\"%(output))\n",
+    "                            myfile.close()\n",
+    "```\n",
+    "1. We are using our favorite if/else statement to check that the confound.txt exists.\n",
+    "  * But what about perfect subjects? They won't have a confound.txt??? HALP\n",
+    "  * This is kinda great problem, and easy to fix, we are going to use \n",
+    "  ```\n",
+    "  os.system(\"touch motion_assessment/%s_confound.txt\"%(output))\n",
+    "  ```\n",
+    "  to create a blank text file with the correct name for our 1st level feats to find\n",
+    "2. Most of our particpants aren't perfectly still, so we want to create a check variable:\n",
+    "  * We are using a new module called subprocess\n",
+    "  * This operates very similar to os.system, but we can define the type of shell and use the additional check_output functionality to save our output to a variable\n",
+    "  * So here we are searching for our confound.txt using grep, then we are counting the lines in the file (wc -l)\n",
+    "3. Next we are creating a num_scrub variable:\n",
+    "  * This is a weird looking loop!\n",
+    "  * We could have also written it as:\n",
+    "  ```\n",
+    "  for s in check.split():\n",
+    "      if s.isdigit:\n",
+    "          num_scrub=int(s)\n",
+    "  ```\n",
+    "  * Basically we want to remove white space with split, check if it is a digit, and make it an integer if it is\n",
+    "4. Great we have an integer now we can check if that integer is bigger or smaller than our \"bad\" criteria\n",
+    "  * Our final loop compares our num_scrub to a criteria we set (45)\n",
+    "  * If num_scrub is bigger we want to note it so we are going to open a file\n",
+    "  ```\n",
+    "  with open(out_bad_bold_list, \"a\") as myfile:\n",
+    "  ```\n",
+    "  * We are going to write the subject information to the file\n",
+    "  ```\n",
+    "  myfile.write(\"%s\\n\"%(output))\n",
+    "  ```\n",
+    "  * Then we are going to close the file\n",
+    "  ```\n",
+    "  myfile.close()\n",
+    "  ```\n",
+    "#### Important note: make sure you close the file outside the loop! Otherwise on the second loop it will try to write to closed file! Or it will try to open an already open file. Either way you won't be happy with the error.\n",
+    "#### Bonus points: what is the \\n when we are writing the output to file? Why include this?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 5. Move everything into our directory we made (#1)\n",
+    "```\n",
+    "if os.path.exists(\"%s_mcf.par\"%(output)):\n",
+    "    if os.path.exists(os.path.join(basedir,dir,'motion_assessment',\"%s_mcf.par\"%(output))):\n",
+    "        os.remove(os.path.join(basedir,dir,'motion_assessment',\"%s_mcf.par\"%(output)))\n",
+    "shutil.move(\"%s_mcf.par\"%(output),os.path.join(basedir,dir,'motion_assessment'))\n",
+    "```\n",
+    "Since we ran MCFLIRT using the -plot flag we should have a .par file\n",
+    "1. We are checking that file exists, seeing if we already moved, if we already did we are deleting the old one\n",
+    "```\n",
+    "if os.path.exists(\"%s_mcf.par\"%(output)):\n",
+    "    if os.path.exists(os.path.join(basedir,dir,'motion_assessment',\"%s_mcf.par\"%(output))):\n",
+    "        os.remove(os.path.join(basedir,dir,'motion_assessment',\"%s_mcf.par\"%(output)))\n",
+    "```\n",
+    "2. We are moving the .par to our motion_assessment directory using the shutil command\n",
+    "  * It is always a good idea to check that the file doesn't already exist\n",
+    "  * Shutil won't overwrite a file instead it will error out\n",
+    "  * Shutil uses the following formula \n",
+    "  ```\n",
+    "  shutil.move(path_file_to_move, path_to_new_file_location)\n",
+    "  ```\n",
+    "#### Bonus points: How could we use shutil.move to rename a file?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### 6. Create our motion regressors\n",
+    "##### Note: If you are planning on using MCFLIRT in FEAT you don't need this, but it is fun to learn right???\n",
+    "```\n",
+    "rawfile = open(os.path.join(os.path.join(basedir,dir,'motion_assessment','%s_mcf.par'%(output))), 'r')\n",
+    "table = [line.rstrip().split() for line in rawfile.readlines()]\n",
+    "for i in range(6):\n",
+    "    newtable = ([[line[i]] for line in table])\n",
+    "    f=open(os.path.join(basedir,dir,'motion_assessment','%s_motcor%i.txt'%(output,i)),'w')\n",
+    "    for item in newtable:\n",
+    "        neat=item[0]\n",
+    "        f.write(str(neat)+'\\n')\n",
+    "    f.close()\n",
+    "```\n",
+    "1. We are going to open our .par file as rawfile\n",
+    "2. Gah! Another weird looking loop!\n",
+    "```\n",
+    "for line in rawfile.readlines():\n",
+    "    table=line.rstrip().split()\n",
+    "```\n",
+    "   * We are reading in the rawfile line by line (readlines)\n",
+    "   * We are removing the whitespace characters on the right (rstrip) and splitting it by white space (this makes the column)\n",
+    "3. We always are going to have 6 motion parameters from MCFLIRT so we are setting a counter called i\n",
+    "   * This counter is going to count up to 6\n",
+    "   * Python likes to be a little difficult, and starts counting at 0, so our counter will count (0,1,2,3,4,5)\n",
+    "4. Newtable is taking our inital table and raw data and making a new table in a list format \n",
+    "```\n",
+    "newtable = ([[line[i]] for line in table])\n",
+    "```\n",
+    "   * It is using our counter (i) to grab each line\n",
+    "5. With our nice list we can now open a file to write to and each list item \n",
+    "   * We are using the same counter so we don't mix up the parameters"
+   ]
   },
   {
    "cell_type": "code",
