got the jupyter notebook update, slides looking better

--- a/preprocess/prepro_slides.ipynb
+++ b/preprocess/prepro_slides.ipynb
@@ -24,9 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -38,7 +37,8 @@
     "import pdb\n",
     "import subprocess\n",
     "import argparse\n",
-    "import datetime"
+    "import datetime\n",
+    "import shutil"
    ]
   },
   {
@@ -49,7 +49,8 @@
     }
    },
    "source": [
-    "### Often times we won't know all the modules we want to import right off the bat  but I like to make sure that as I am scripting I always put my modules at the top this allows others who may use my script to make sure they have all the necessary tools"
+    "### Often times we won't know all the modules we want to import right off the bat  but I like to make sure that as I am scripting I always put my modules at the. \n",
+    "### Top this allows others who may use my script to make sure they have all the necessary tools"
    ]
   },
   {
@@ -114,12 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "fragment"
     }
    },
+   "outputs": [],
+   "source": [
+    "def prepro(basedir):\n",
+    "    #Do something cool\n",
+    "    print('Hello data in the path '+basedir)\n",
+    "def main():\n",
+    "    #load in all the global variables prepro needs, right now this is just the path to the data\n",
+    "    basedir='/Users/gracer/Desktop/data' \n",
+    "    prepro(basedir) #call prepro to do cool things "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -130,14 +146,6 @@
     }
    ],
    "source": [
-    "def prepro(basedir):\n",
-    "    #Do something cool\n",
-    "    print('Hello data in the path '+basedir)\n",
-    "def main():\n",
-    "    #load in all the global variables prepro needs, right now this is just the path to the data\n",
-    "    basedir='/Users/gracer/Desktop/data' \n",
-    "    prepro(basedir) #call prepro to do cool things \n",
-    "    \n",
     "main()#call main to execute all our globals then run our prepro function"
    ]
   },
@@ -182,9 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -266,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -277,8 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -311,9 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -349,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +398,7 @@
        "149"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +418,7 @@
        "'/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -441,7 +451,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is /Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz\n",
+      "my path is /Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz\n",
       "['', 'Users', 'gracer', 'Desktop', 'data', 'sub-10159', 'func', 'sub-10159_task-bart_bold_brain.nii.gz']\n",
       "sub-10159\n"
      ]
@@ -449,7 +459,7 @@
    ],
    "source": [
     "x=input[1]\n",
-    "print('this is '+x)\n",
+    "print('my path is '+x)\n",
     "y=x.split('/')\n",
     "print (y)\n",
     "sub=y[5]\n",
@@ -465,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -551,10 +561,10 @@
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-c263dd53731b>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-29-c263dd53731b>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -576,22 +586,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz\n",
+      "sub-10159_task-bart_bold_brain_brain\n"
+     ]
     }
    ],
    "source": [
     "#os.system('bet' x output '-F')\n",
+    "#print(x)\n",
+    "#print(output)\n",
     "os.system('bet %s %s -F'%(x, output))"
    ]
   },
@@ -702,10 +712,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def prepro(basedir):\n",
@@ -722,20 +730,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> <ipython-input-25-807966444b94>(2)prepro()\n",
-      "-> for item in glob.glob(os.path.join(basedir,'sub-*','func','sub-*.nii.gz')):\n"
+      "\u001b[H\u001b[2J"
      ]
     }
    ],
    "source": [
-    "main()"
+    "#main()\n",
+    "#%clear"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concept Check: Why do we have to type main( ) after def prepro( ) and def main( )? Why do we have 2 functions? "
    ]
   },
   {
@@ -765,10 +780,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def prepro(basedir):\n",
@@ -790,14 +803,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[H\u001b[2J"
+     ]
+    }
+   ],
    "source": [
-    "main()"
+    "main()\n",
+    "#%clear"
    ]
   },
   {
